@@ -5,7 +5,7 @@ import socket
 import traceback
 import thread
 import threading
-import Queue
+import queue
 
 from idlelib import CallTips
 from idlelib import AutoComplete
@@ -85,7 +85,7 @@ def main(del_exitfunc=False):
                     continue
             try:
                 seq, request = rpc.request_queue.get(block=True, timeout=0.05)
-            except Queue.Empty:
+            except queue.Empty:
                 continue
             method, args, kwargs = request
             ret = method(*args, **kwargs)
